--- a/luci-app-onliner/luasrc/view/onliner/onliner.htm
+++ b/luci-app-onliner/luasrc/view/onliner/onliner.htm
@@ -71,7 +71,7 @@ end
 
 					var td = tr.insertCell(-1);
 						td.colSpan = 4;
-						td.innerHTML = '<em><br /><%:What? There is no one online.%></em>';
+						td.innerHTML = '<em><br /><%:当前无用户在线%></em>';
 				}
 			}
 		}
@@ -81,13 +81,13 @@ end
 <h2 name="content"><%:Status%></h2>
 
 <fieldset class="cbi-section">
-	<legend><%:user online%></legend>
+	<legend><%:在线用户%></legend>
 
 	<table class="cbi-section-table" id="online_status_table">
 		<tr class="cbi-section-table-titles">
 			<th class="cbi-section-table-cell"><%:Hostname%></th>
-			<th class="cbi-section-table-cell"><%:IPv4-Address%></th>
-			<th class="cbi-section-table-cell"><%:MAC-Address%></th>
+			<th class="cbi-section-table-cell"><%:IP Address%></th>
+			<th class="cbi-section-table-cell"><%:MAC Address%></th>
 			<th class="cbi-section-table-cell"><%:Interface%></th>
 		</tr>
 		<tr class="cbi-section-table-row">
